Add New and Path

--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
 				<span>Username</span>
 			</h2>
 		</header>
+
+		<div>
+			<div>Add New +</div>
+			<div>Home</div>
+			<div>Shared</div>
+			<div>Trash</div>
+		</div>
+
+		<br />
 		<div>
 			<table>
+				<thead>
+					<tr>
+						<th>Path: /Photos/...</th>
+					</tr>
+				</thead>
 				<thead>
 					<tr>
 						<th>File Name</th>
