Path will be div above file table

--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
 
 		<br />
 		<div>
+			<b>Path: /Photos/...</b>
 			<table>
-				<thead>
-					<tr>
-						<th>Path: /Photos/...</th>
-					</tr>
-				</thead>
 				<thead>
 					<tr>
 						<th>File Name</th>
