Added checkboxes to table

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<table>
 				<thead>
 					<tr>
+						<th><input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkbox_value"></th>
 						<th>File Name</th>
 						<th>Date Modified</th>
 						<th>Date Created</th>
@@ -36,18 +37,21 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td><input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkbox_value"></td>
 						<td>example_file1.txt</td>
 						<td>2023-09-25 14:30:00</td>
 						<td>2023-09-20 10:15:00</td>
 						<td>1024</td>
 					</tr>
 					<tr>
+						<td><input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkbox_value"></td>
 						<td>example_file2.jpg</td>
 						<td>2023-09-26 09:45:00</td>
 						<td>2023-09-18 14:20:00</td>
 						<td>2048</td>
 					</tr>
 					<tr>
+						<td><input type="checkbox" id="myCheckbox" name="myCheckbox" value="checkbox_value"></td>
 						<td>example_file3.pdf</td>
 						<td>2023-09-27 16:00:00</td>
 						<td>2023-09-19 11:30:00</td>
