--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<!-- Tell browsers not to scale the viewport automatically -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 	</head>
@@ -14,6 +13,13 @@
 				<span>Username</span>
 			</h2>
 		</header>
+
+		<nav>
+			<form action="/search" method="get">
+				<input type="text" id="searchInput" name="q" placeholder="Search...">
+				<button type="submit">Search</button>
+			</form>
+		</nav>
 
 		<div>
 			<div>Add New +</div>
