Added href to other pages. Home and shared.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,22 @@
 		<br />
 
 		<div>
-			<div>Add New +</div>
-			<div>Home</div>
-			<div>Shared</div>
-			<div>Trash</div>
+			<div>
+				<button>Add New +</button>
+			</div>
+			<div>
+				<a href="index.html">
+					<button>Home</button>
+				</a>
+			</div>
+			<div>
+				<a href="shared.html">
+					<button>Shared</button>
+				</a>
+			</div>
+			<div>
+				<button>Trash</button>
+			</div>
 			<div>File count: 3</div>
 		</div>
 
