Added file browser icon to header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<header>
+			<img src="file-browser-icon.png" />
 			<b>
 				<span>Users & Settings</span>
 				<span> | </span>
