Added David Bauch to footer. Login page with form, goes to index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 		<br />
 		<footer>
-			<div>Author Name(s)</div>
+			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
 		</footer>
 	</body>
