--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="file-browser-icon.png" />
+			<img style="width:2.5rem" src="file-browser-icon.png" />
 			<b>
 				<span>Login page</span>
 			</b>
