Added websocket placeholder

--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 		</div>
 
 		<br />
+		<div>
+			<b>Web Socket - Live Viewers of Directory</b>
+			<div>Jim viewing: <u>directory</u></div>
+			<div>Bob viewing: <u>example_file2.jpg</u></div>
+		</div>
+
+		<br />
 		<footer>
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
