Updated href's to home.html and index.html based on Home and Log out buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<br />
 
 		<div>
-			<form action="index.html" method="get">
+			<form action="home.html" method="get">
 				<fieldset>
 					<legend>Username</legend>
 					<input type="text" placeholder="Username" required>
