--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 		<div>
 			<div>
-				<a href="index.html">
+				<a href="home.html">
 					<button>Home</button>
 				</a>
 			</div>
@@ -34,7 +34,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="login.html">
+				<a href="index.html">
 					<button>Log out</button>
 				</a>
 			</div>
