--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 				<button>Add New +</button>
 			</div>
 			<div>
-				<a href="index.html">
+				<a href="home.html">
 					<button>Home</button>
 				</a>
 			</div>
@@ -41,7 +41,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="login.html">
+				<a href="index.html">
 					<button>Log out</button>
 				</a>
 			</div>
