--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<fieldset>
 					<legend>Password</legend>
-					<input type="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
+					<input name="password" type="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
 					<label for="password">Must contain at least one letter and one number</label>
 				</fieldset>
 
