Adding name="" to input elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<form action="home.html" method="get">
 				<fieldset>
 					<legend>Username</legend>
-					<input type="text" placeholder="Username" required>
+					<input name="username" type="text" placeholder="Username" required>
 				</fieldset>
 
 				<fieldset>
