--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<form action="home.html" method="get">
 				<fieldset>
 					<legend>Username</legend>
-					<input name="username" type="text" placeholder="Username" required>
+					<input type="text" name="username" placeholder="Username" required>
 				</fieldset>
 
 				<fieldset>
 					<legend>Password</legend>
-					<input name="password" type="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
+					<input type="password" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
 					<label for="password">Must contain at least one letter and one number</label>
 				</fieldset>
 
