--- a/index.html
+++ b/index.html
@@ -5,30 +5,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#">
-						<img style="width:2.5rem" src="file-browser-icon.png" />
-						Login
+						<img src="file-browser-icon.png" />
+						File browser
 					</a>
 				</div>
 			</nav>
 		</header>
-		<div style="display: flex; justify-content: center; align-items: center;">
-			<form action="home.html" method="get">
-				<div class="mb-3">
-					<input type="text" class="form-control" name="username" placeholder="Username" required>
-				</div>
-				<div class="mb-3">
-					<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
-					<div id="passwordHelp" class="form-text">Must contain at least one letter and one number</div>
-				</div>
-				<button type="submit" class="btn btn-primary">Login</button>
-			</form>
-		</div>
+			<div>
+				<form action="home.html" method="get">
+					<legend>Login</legend>
+					<div class="mb-3">
+						<input type="text" class="form-control" name="username" placeholder="Username" required>
+					</div>
+					<div class="mb-3">
+						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
+						<div id="passwordHelp" class="form-text">Must contain at least one letter and one number</div>
+					</div>
+					<button type="submit" class="btn btn-primary">Login</button>
+				</form>
+			</div>
 		<footer>
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
