--- a/home.html
+++ b/home.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link href="home.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
+			<nav class="navbar bg-body-tertiary">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#">
+						<img src="file-browser-icon.png" />
+						Username
+					</a>
+				</div>
+			</nav>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#">Navbar</a>
@@ -45,19 +55,7 @@
 					</div>
 				</div>
 			</nav>
-			<img style="width:2.5rem" src="file-browser-icon.png" />
-			<b>
-				<span>Users & Settings</span>
-				<span>|</span>
-				<span>Username (retrieved from database after login)</span>
-			</b>
-			<form action="/search" method="get">
-				<input type="text" name="search" placeholder="Search...">
-				<button type="submit">Search</button>
-			</form>
 		</header>
-		<br />
-
 		<div>
 			<div>
 				<button>Add New +</button>
@@ -85,8 +83,6 @@
 			</div>
 			<div>File count: 3</div>
 		</div>
-
-		<br />
 		<div>
 			<label>Path: </label>
 			<input type="text" name="path" value="/Photos/...">
@@ -134,20 +130,14 @@
 				</tbody>
 			</table>
 		</div>
-
-		<br />
 		<div>
 			<b>Web Socket - Live Viewers of Directory</b>
 			<div>Jim viewing: <u>directory</u></div>
 			<div>Bob viewing: <u>example_file2.jpg</u></div>
 		</div>
-
-		<br />
 		<footer>
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
 		</footer>
 	</body>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </html>
