--- a/home.html
+++ b/home.html
@@ -22,9 +22,6 @@
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#">Navbar</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
@@ -53,10 +50,16 @@
 							<button class="btn btn-outline-success" type="submit">Search</button>
 						</form>
 					</div>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 				</div>
 			</nav>
 		</header>
 		<div>
+			<div>
+				<b>WebSocket Status</b>
+			</div>
 			<div>
 				<button>Add New +</button>
 			</div>
@@ -129,11 +132,6 @@
 					</tr>
 				</tbody>
 			</table>
-		</div>
-		<div>
-			<b>Web Socket - Live Viewers of Directory</b>
-			<div>Jim viewing: <u>directory</u></div>
-			<div>Bob viewing: <u>example_file2.jpg</u></div>
 		</div>
 		<footer>
 			<div>David Bauch</div>
