Files table done for now

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 					</div>
 					<form class="d-flex" role="search">
 						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
+						<button class="btn btn-primary" type="submit">Search</button>
 					</form>
 				</div>
 			</nav>
@@ -65,14 +65,13 @@
 						<button class="btn">Log out</button>
 					</a>
 				</div>
-				<div class="btn">File count: 3</div>
+				<div class="btn"><div>File count: 3</div></div>
 			</div>
 			<div class="files">
 				<div>
-					<label>Path: </label>
-					<input type="text" name="path" value="Ex: /Photos/...">
+					<input class="form-control" type="text" name="path" placeholder="/" value="/">
 				</div>
-				<table>
+				<table class="table table-hover">
 					<thead>
 						<tr>
 							<td><input type="checkbox" name="select-all"></td>
@@ -84,7 +83,7 @@
 							<th>Type</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody class="table-group-divider">
 						<tr>
 							<td><input type="checkbox"></td>
 							<td><img style="width:2.5em" src="file-browser-icon.png" /></td>
