Home page is done! For now at least

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 				</div>
 					<div class="dropdown">
 						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Add New +
+							Add New
 						</button>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" href="#">Action</a></li>
@@ -68,8 +68,19 @@
 				<div class="btn"><div>File count: 3</div></div>
 			</div>
 			<div class="files">
-				<div>
-					<input class="form-control" type="text" name="path" placeholder="/" value="/">
+				<div class="file-options">
+					<div><input class="form-control" type="text" name="path" placeholder="/" value="/"></div>
+					<div class="dropdown">
+						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Sort by
+						</button>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li><hr class="dropdown-divider"></li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+					</div>
 				</div>
 				<table class="table table-hover">
 					<thead>
