--- a/about.html
+++ b/about.html
@@ -1,55 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<link href="about.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
-			<img style="width:2.5rem" src="file-browser-icon.png" />
-			<b>
-				<span>Users & Settings</span>
-				<span>|</span>
-				<span>Username (retrieved from database after login)</span>
-			</b>
+			<nav class="navbar bg-body-tertiary">
+				<div class="container-fluid">
+					<div class="d-inline-flex">
+						<a class="navbar-brand" href="#">
+							<img src="file-browser-icon.png" />
+						</a>
+						<a class="navbar-brand" href="#">
+							<span id=user>About</span>
+						</a>
+					</div>
+				</div>
+			</nav>
 		</header>
-		<br />
-
 		<div>
-			<div>
-				<a href="home.html">
-					<button>Home</button>
-				</a>
+			<div class="menu">
+				<div>
+					<button class="btn btn-success" onclick="this.classList.toggle('btn-success');this.classList.toggle('btn-danger');this.textContent==='Connected'?this.textContent='Disconnected':this.textContent='Connected';">Connected</button>
+				</div>
+					<div class="dropdown">
+						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Add New
+						</button>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li><hr class="dropdown-divider"></li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+					</div>
+				<div>
+					<a href="home.html">
+						<button class="btn">Home</button>
+					</a>
+				</div>
+				<div>
+					<button class="btn">Shared</button>
+				</div>
+				<div>
+					<button class="btn">Trash</button>
+				</div>
+				<div>
+					<a href="about.html">
+						<button class="btn">About page</button>
+					</a>
+				</div>
+				<div>
+					<a href="index.html">
+						<button class="btn">Log out</button>
+					</a>
+				</div>
+				<div class="btn"><div>File count: 3</div></div>
 			</div>
 			<div>
-				<button>Shared</button>
-			</div>
-			<div>
-				<button>Trash</button>
-			</div>
-			<div>
-				<a href="about.html">
-					<button>About page</button>
-				</a>
-			</div>
-			<div>
-				<a href="index.html">
-					<button>Log out</button>
-				</a>
+				<h2 style="text-align: center; border-bottom: groove;">My story, and my why</h2>
+				<p style="font-size: 1.2rem;">If you're like me, you have photos, videos and files you want to access and share privately. With some technical know how and a few dollars a month you could host your own server and have all your files stored safely on the cloud accessible through any browser. Cloud services are expensive and there's no way to gaurentee your infomation is private. Plus, they require other people to have an account to access any files you share. In general, storing files and sharing them is tough. I plan on making self hosted cloud storage and file sharing easy and simple, whether it be from a laptop or mobile device.</p>
 			</div>
 		</div>
-
-		<div>
-			<p>If you're like me, you have photos, videos and files you want to access and share privately. With some technical know how and a few dollars a month you could host your own server and have all your files stored safely on the cloud accessible through any browser. Cloud services are expensive and there's no way to gaurentee your infomation is private. Plus, they require other people to have an account to access any files you share. In general, storing files and sharing them is tough. I plan on making self hosted cloud storage and file sharing easy and simple, whether it be from a laptop or mobile device.</p>
-		</div>
-
 		<footer>
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
 		</footer>
 	</body>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </html>
