Added sort and options list items

--- a/home.html
+++ b/home.html
@@ -38,10 +38,14 @@
 							Add New
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li class="dropdown-item">New folder</li>
+							<li class="dropdown-item">New text file</li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
+							<li class="dropdown-item">Upload Folder</li>
+							<li class="dropdown-item">Upload files</li>
+							<li><hr class="dropdown-divider"></li>
+							<li class="dropdown-item">URL to file</li>
+							<li class="dropdown-item">URL to folder</li>
 						</ul>
 					</div>
 				<div>
@@ -75,10 +79,30 @@
 							Sort by
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li class="dropdown-item">Name</li>
+							<li class="dropdown-item">Modified Date</li>
+							<li class="dropdown-item">Creation Date</li>
+							<li class="dropdown-item">Size</li>
+							<li class="dropdown-item">Type</li>
+						</ul>
+					</div>
+					<div class="dropdown">
+						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Options
+						</button>
+						<ul class="dropdown-menu">
+							<li class="dropdown-item">Download</li>
+							<li class="dropdown-item">Rename</li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
+							<li class="dropdown-item">Trash</li>
+							<li class="dropdown-item">Delete</li>
+							<li><hr class="dropdown-divider"></li>
+							<li class="dropdown-item">Create link</li>
+							<li class="dropdown-item">Move to</li>
+							<li class="dropdown-item">Copy to</li>
+							<li class="dropdown-item">Symbolic link to</li>
+							<li><hr class="dropdown-divider"></li>
+							<li class="dropdown-item">Details</li>
 						</ul>
 					</div>
 				</div>
