Changed order of file options

--- a/home.html
+++ b/home.html
@@ -93,14 +93,14 @@
 						<ul class="dropdown-menu">
 							<li class="dropdown-item">Download</li>
 							<li class="dropdown-item">Rename</li>
+							<li class="dropdown-item">Create link</li>
+							<li><hr class="dropdown-divider"></li>
+							<li class="dropdown-item">Move</li>
+							<li class="dropdown-item">Copy</li>
+							<li class="dropdown-item">Symbolic link</li>
 							<li><hr class="dropdown-divider"></li>
 							<li class="dropdown-item">Trash</li>
 							<li class="dropdown-item">Delete</li>
-							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Create link</li>
-							<li class="dropdown-item">Move to</li>
-							<li class="dropdown-item">Copy to</li>
-							<li class="dropdown-item">Symbolic link to</li>
 							<li><hr class="dropdown-divider"></li>
 							<li class="dropdown-item">Details</li>
 						</ul>
