Moved navbar on login page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
-				<div class="container-fluid">
-					<a class="navbar-brand" href="#">
-						<img src="file-browser-icon.png" />
+				<div>
+					<a class="navbar-brand" href="">
+						Login page
+					</a>
+				</div>
+				<div style="flex: auto;"></div>
+				<div>
+					<a class="navbar-brand" href="">
 						File browser
+						<img src="file-browser-icon.png" />
 					</a>
 				</div>
 			</nav>
