--- a/home.html
+++ b/home.html
@@ -12,20 +12,28 @@
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
-				<div class="container-fluid">
-					<div class="d-inline-flex">
-						<a class="navbar-brand" href="#">
-							<img src="file-browser-icon.png" />
-						</a>
-						<a class="navbar-brand" href="#">
-							<span id=user>Username</span>
-						</a>
+				<button class="btn btn-primary navbar-brand">
+					<div class="center">
+						<svg xmlns="http://www.w3.org/2000/svg" width="30" height=width fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+							<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+						</svg>
 					</div>
-					<form class="d-flex" role="search">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-primary" type="submit">Search</button>
-					</form>
-				</div>
+				</button>
+				<div class="flex-fill"></div>
+				<form class="d-flex" role="search">
+					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-primary" type="submit">
+						<div class="center">
+							<svg viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
+								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+							</svg>
+						</div>
+					</button>
+				</form>
+				<a class="navbar-brand" href="">
+					File browser
+					<img src="file-browser-icon.png" />
+				</a>
 			</nav>
 		</header>
 		<div>
