--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
-				<div>
-					<a class="navbar-brand" href="">
-						Login page
-					</a>
-				</div>
-				<div style="flex: auto;"></div>
-				<div>
-					<a class="navbar-brand" href="">
-						File browser
-						<img src="file-browser-icon.png" />
-					</a>
-				</div>
+				<a class="navbar-brand" href="">
+					Login page
+				</a>
+				<div class="flex-fill"></div>
+				<a class="navbar-brand" href="">
+					File browser
+					<img src="file-browser-icon.png" />
+				</a>
 			</nav>
 		</header>
 			<div>
