Cleaned up css duplicates & did about.html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
-				<a class="navbar-brand" href="">
-					Login page
-				</a>
+				<a class="navbar-brand" href="">Login page</a>
 				<div class="flex-fill"></div>
-				<a class="navbar-brand" href="">File browser</a>
-				<img src="file-browser-icon.png" />
+				<a class="navbar-brand" href="">
+					File browser
+					<img src="file-browser-icon.png" />
+				</a>
 			</nav>
 		</header>
 			<div>
