--- a/about.html
+++ b/about.html
@@ -5,23 +5,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		<link href="about.css" rel="stylesheet">
+		<link href="main.css" rel="stylesheet">
+		<link href="base.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
 			<nav class="navbar bg-body-tertiary">
-				<div class="container-fluid">
-					<div class="d-inline-flex">
-						<a class="navbar-brand" href="#">
-							<img src="file-browser-icon.png" />
-						</a>
-						<a class="navbar-brand" href="#">
-							<span id=user>About</span>
-						</a>
+				<button class="btn btn-primary navbar-brand" onclick='s=document.querySelector("body > div > div.menu").style;s.display===""?s.display="none":s.display="";'>
+					<div class="center-vert">
+						<svg width="30" height="30" class="bi bi-list" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+						<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+						</svg>
 					</div>
-				</div>
+				</button>
+				<a class="navbar-brand" href="">About page</a>
+				<div class="flex-fill"></div>
+				<a class="navbar-brand" href="">
+					File browser
+					<img src="file-browser-icon.png" />
+				</a>
 			</nav>
 		</header>
 		<div>
