--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>File Browser</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		<link href="main.css" rel="stylesheet">
-		<link href="base.css" rel="stylesheet">
-		<link href="home.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
+		<link href="css/base.css" rel="stylesheet">
+		<link href="css/home.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
@@ -33,7 +33,7 @@
 					</button>
 				</form>
 				<a class="navbar-brand" href="">
-					<img src="file-browser-icon.png" />
+					<img src="images/file-browser-icon.png" />
 				</a>
 			</nav>
 		</header>
@@ -130,7 +130,7 @@
 					<tbody class="table-group-divider">
 						<tr>
 							<td><input type="checkbox"></td>
-							<td><img style="width:2.5em" src="file-browser-icon.png" /></td>
+							<td><img style="width:2.5em" src="images/file-browser-icon.png" /></td>
 							<td>example_file1.txt</td>
 							<td>2023-09-25 14:30:00</td>
 							<td>2023-09-20 10:15:00</td>
@@ -139,7 +139,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox"></td>
-							<td><img style="width:2.5em" src="file-browser-icon.png" /></td>
+							<td><img style="width:2.5em" src="images/file-browser-icon.png" /></td>
 							<td>example_file2.jpg</td>
 							<td>2023-09-26 09:45:00</td>
 							<td>2023-09-18 14:20:00</td>
@@ -148,7 +148,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox"></td>
-							<td><img style="width:2.5em" src="file-browser-icon.png" /></td>
+							<td><img style="width:2.5em" src="images/file-browser-icon.png" /></td>
 							<td>example_file3.pdf</td>
 							<td>2023-09-27 16:00:00</td>
 							<td>2023-09-19 11:30:00</td>
