--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -8,6 +8,9 @@
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/base.css" rel="stylesheet">
 		<link href="css/home.css" rel="stylesheet">
+		<script src="js/jquery-3.7.1.js"></script>
+		<script src="js/files.js"></script>
+		<script src="js/utils.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
