--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -18,7 +18,7 @@
 		<header>
 			<nav class="navbar bg-body-tertiary">
 				<button class="btn btn-primary navbar-brand" onclick='s=document.querySelector("body > div > div.menu").style;s.display===""?s.display="none":s.display="";'>
-					<div class="center-vert">
+					<div class="center-y">
 						<svg width="30" height="30" class="bi bi-list" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
 						</svg>
@@ -28,7 +28,7 @@
 				<form class="d-flex" role="search">
 					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 					<button class="btn btn-primary" type="submit">
-						<div class="center-vert">
+						<div class="center-y">
 							<svg width="20" height="20" class="bi bi-search" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
 							</svg>
@@ -84,38 +84,43 @@
 				<div class="btn"><div>File count: 3</div></div>
 			</div>
 			<div class="files">
-				<div class="file-options">
-					<div><input class="form-control" type="text" name="path" placeholder="/" value="/"></div>
-					<div class="dropdown">
-						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Sort by
-						</button>
-						<ul class="dropdown-menu">
-							<li class="dropdown-item">Name</li>
-							<li class="dropdown-item">Modified Date</li>
-							<li class="dropdown-item">Creation Date</li>
-							<li class="dropdown-item">Size</li>
-							<li class="dropdown-item">Type</li>
-						</ul>
+				<div class="flex-c">
+					<div class="flex-r">
+						<div class="dropdown">
+							<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Sort by
+							</button>
+							<ul class="dropdown-menu">
+								<li class="dropdown-item">Name</li>
+								<li class="dropdown-item">Modified Date</li>
+								<li class="dropdown-item">Creation Date</li>
+								<li class="dropdown-item">Size</li>
+								<li class="dropdown-item">Type</li>
+							</ul>
+						</div>
+						<div class="dropdown">
+							<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Options
+							</button>
+							<ul class="dropdown-menu">
+								<li class="dropdown-item">Download</li>
+								<li class="dropdown-item">Rename</li>
+								<li class="dropdown-item">Create link</li>
+								<li><hr class="dropdown-divider"></li>
+								<li class="dropdown-item">Move</li>
+								<li class="dropdown-item">Copy</li>
+								<li class="dropdown-item">Symbolic link</li>
+								<li><hr class="dropdown-divider"></li>
+								<li class="dropdown-item">Trash</li>
+								<li class="dropdown-item">Delete</li>
+								<li><hr class="dropdown-divider"></li>
+								<li class="dropdown-item">Details</li>
+							</ul>
+						</div>
+						<div class="center-y flex-r flex-1 overflow-x-auto"></div>
 					</div>
-					<div class="dropdown">
-						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Options
-						</button>
-						<ul class="dropdown-menu">
-							<li class="dropdown-item">Download</li>
-							<li class="dropdown-item">Rename</li>
-							<li class="dropdown-item">Create link</li>
-							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Move</li>
-							<li class="dropdown-item">Copy</li>
-							<li class="dropdown-item">Symbolic link</li>
-							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Trash</li>
-							<li class="dropdown-item">Delete</li>
-							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Details</li>
-						</ul>
+					<div class="flex-1">
+						<input class="form-control" type="text" name="path" placeholder="Type in a valid path" value="">
 					</div>
 				</div>
 				<table class="table table-hover">
