--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -126,7 +126,7 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<td><input type="checkbox" onclick="Array.from(document.querySelectorAll('.checkbox')).forEach(el=>el.checked=this.checked);"></td>
+							<td><input type="checkbox" onclick="Array.from(document.querySelectorAll('.checkbox')).forEach(el=>{el.checked=this.checked;addToSelected(el)});"></td>
 							<th>Icon</th>
 							<th id="filename">Name</th>
 							<th id="modifiedDate">Modified Date</th>
