--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -117,9 +117,9 @@
 								<li class="dropdown-item">Details</li>
 							</ul>
 						</div>
-						<div class="flex-r flex-1 overflow-x-auto"></div>
+						<div class="flex-r flex-0-1 overflow-x-auto"></div>
 					</div>
-					<div class="flex-1">
+					<div class="flex-0-1">
 						<input class="form-control" type="text" name="path" placeholder="Type in a valid path" value="">
 					</div>
 				</div>
