--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -103,7 +103,7 @@
 								Options
 							</button>
 							<ul class="dropdown-menu">
-								<li class="dropdown-item">Download</li>
+								<li class="dropdown-item" onclick="download();">Download</li>
 								<li class="dropdown-item">Rename</li>
 								<li class="dropdown-item">Create link</li>
 								<li><hr class="dropdown-divider"></li>
