--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -117,7 +117,7 @@
 								<li class="dropdown-item">Details</li>
 							</ul>
 						</div>
-						<div class="flex-r flex-0-1 overflow-x-auto"></div>
+						<div id="filePathButtons" class="flex-r flex-0-1 overflow-x-auto"></div>
 					</div>
 					<div class="flex-0-1">
 						<input class="form-control" type="text" name="path" placeholder="Type in a valid path" value="">
