interm rename function

--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -104,7 +104,7 @@
 							</button>
 							<ul class="dropdown-menu">
 								<li class="dropdown-item" onclick="download();">Download</li>
-								<li class="dropdown-item">Rename</li>
+								<li class="dropdown-item" onclick="rename();">Rename</li>
 								<li class="dropdown-item">Create link</li>
 								<li><hr class="dropdown-divider"></li>
 								<li class="dropdown-item">Move</li>
